# hermes-skill-automation

./: .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
examples/: README.md  example-draft.SKILL.md  example-export.md  example-proposal.md
plugin/skill_factory_v1/: __init__.py  cli.py  plugin.yaml  state.py
plugin/skill_factory_v1/skills/workflow-to-skill/: SKILL.md
skills/workflow-to-skill/: SKILL.md
tests/: test_plugin_registration.py  test_state.py
